# wine-buddy-public

./: .gitignore  .pre-commit-config.yaml  PRIVACY.md  Procfile  README.md  pyproject.toml  wine_buddy.ipynb
scripts/: precompute.py
uain/: cli.py  config.py  pairings.py  parsing.py  rules.py  scraper.py  services.py
uain/data/: descriptor_mapping_tastes.csv
uain/notebooks/: wine_buddy.ipynb
uain/pairing/: __init__.py  pairings.py  rules.py
uain/scraper/: __init__.py  parse_raw.py  parsing.py  scraper.py
uain/web/: app.py  services.py
uain/web/static/: style.css
uain/web/templates/: base.html  find_similar.html  pair_to_food.html  privacy.html
