[project]
name = "wine-buddy"
version = "0.1.0"
description = "Wine similarity search, recommendations, and food pairing using ML"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "scikit-learn",
    "seaborn",
    "matplotlib",
    "jupyterlab",
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
]

[project.scripts]
wine-buddy = "uain.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uain"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["uain"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]
